# OpenGL-Scene

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  cs330.sln  cs330.vcxproj  cs330.vcxproj.filters
docs/: reflection.docx
images/: README.txt
shaderfiles/: lights.frag  normalmap.frag  skybox.frag  skybox.vs
src/: camera.cpp  camera.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  geometry.cpp  geometry.h  light.cpp  light.h  main.cpp  main.h  material.cpp  material.h  model.cpp  model.h  opengl.h  plane.cpp  plane.h  pyramid.cpp  pyramid.h  shader.cpp  shader.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  texture.cpp  texture.h  torus.cpp  torus.h
